DDD-11 Add an alternatives considered section
Signed-off-by: Chris Cranford <chris@hibernate.org>